--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
             <span class="text-primary">Ripley</span>
           </h1>
           <div class="subheading mb-5">2954 Crows Nest Cir · Anchorage AK, 99515 · (907) 441-9174 ·
-            <a href="mailto:name@email.com">aripley@wharton.upenn.edu</a>
+            <a href="mailto:aripley@wharton.upenn.edu">aripley@wharton.upenn.edu</a>
           </div>
-          <p class="mb-5">I’m a sophomore at the University of Pennsylvania studying Marketing/Operations Management in the Wharton School of Business with a minor in computer science. I work hard to combine my passions for technology and entrepreneurship to create things I can look back on and be proud of. Reach out at aripley@wharton.upenn.edu.</p>
+          <p class="mb-5">I'm a student, freelance web developer, and aspring entrepreneur from Anchorage, Alaska. Currently I’m a sophomore at the University of Pennsylvania studying Operations Management, Marketing, and Computer Science. I work hard to combine my passions for technology and entrepreneurship to create things I can look back on and be proud of. Reach out at <a href="mailto:aripley@wharton.upenn.edu">aripley@wharton.upenn.edu</a>.</p>
         </div>
       </section>
 
@@ -100,17 +100,40 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Project 1</h3>
-              <div class="subheading mb-3">Look at this project</div>
-              <div>its pretty cool</div>
-              <p>isnt it?</p>
+              <h3 class="mb-0">Nalda</h3>
+              <div class="subheading mb-3">Web Dev Freelancer</div>
+              <div>Currently putting my web dev skills to use on a contract project for a Penn startup called <a href="http://naldaeasytravel.com/">Nalda</a>. Nalda is a centralized source for information, food, activities, and fun on college campuses. I'm currently developing the product as a web application that will be turned into a mobile application after a successful beta launch next semester. I'm utilizing technologies such as React/Redux, Express, Mongo, Node.js, Passport, Bootstrap, and SCSS. Check out progress so far on <a href="https://github.com/adamripley98/nalda">github</a>.</div>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2006 - May 2010</span>
+              <span class="text-primary">October 2017 - Present</span>
             </div>
           </div>
 
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Vita Fitness</h3>
+              <div class="subheading mb-3">Cofounder and CEO</div>
+              <div> This was my first experience starting a company. VITA Fitness was an on-demand, peer-to-peer fitness network aimed to revolutionize the personal training industry. Our app replaced the process of hiring overqualified, hyper-expensive personal trainers by connecting novices with regular gym-goers that know what they're doing. I spent a few months developing the mobile application using React Native, Firebase, Node.js, Expo, and more. I spent a semester collecting user feedback, applying for funding and accelerators, and seeking legal advice. Check out the <a href="http://vitafitapp.com/">website</a>,   <a href="https://www.youtube.com/watch?v=lRw4BVoQN4U&feature=youtu.be">promo video</a>, and <a href="https://github.com/adamripley98/fitnessapp">github</a>.
+              </div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">June 2017 - December 2017</span>
+          </div>
         </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Litter Derby</h3>
+            <div class="subheading mb-3">Founder</div>
+            <div> This was a charity project I started back in high school aimed at incentivizing cleaning up trash.
+            </div>
+        </div>
+        <div class="resume-date text-md-right">
+          <span class="text-primary">2015</span>
+        </div>
+      </div>
+
+      </div>
       </section>
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
@@ -175,17 +198,17 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
-          <p>i do cool things outside of work too!</p>
+          <p>Outside of my studies, I'm passionate about weightlifting, web dev, soccer, nature, spikeball, meditation, cooking, drawing, making videos, reading, and traveling. Highlighting a few things, last November I competed in my first <a href="https://vimeo.com/241790505">bodybuilding competition.</a> I'm currently reading <a href="https://fourhourworkweek.com/">The 4 Hour Work Week.</a> As far as coding projects, currently I'm finishing up contract work for Nalda, beginning work on a dating application, and trying to find time to start on a time capsule mobile app idea. I spent 2017 recording a second of every day and compiled <a href="https://www.youtube.com/channel/UCGAmt_wP78wOZ5Dhc39gzbA">this video.</a> Some of my big goals for 2018 are to get better at making <a href="https://www.youtube.com/channel/UCGAmt_wP78wOZ5Dhc39gzbA">videos</a>, get my deadlift squat bench total to 1200 pounds, and to improve my Spanish.</p>
         </div>
       </section>
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
         <div class="my-auto">
           <h2 class="mb-5">Contact</h2>
-          <p>Feel free to send me an email at aripley@wharton.upenn.edu or add me on social media!</p>
+          <p>Feel free to send me an email at <a href="mailto:aripley@wharton.upenn.edu">aripley@wharton.upenn.edu</a> or add me on social media!</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://www.linkedin.com/in/adam-ripley-973668108/">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -193,7 +216,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://www.facebook.com/adam.ripley.39">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
@@ -201,7 +224,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://www.instagram.com/allergyadam/">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
@@ -209,10 +232,26 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://github.com/adamripley98/nalda">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://www.youtube.com/channel/UCGAmt_wP78wOZ5Dhc39gzbA">
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fa fa-youtube fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://soundcloud.com/soccers">
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fa fa-soundcloud fa-stack-1x fa-inverse"></i>
                 </span>
               </a>
             </li>
