--- a/index.html
+++ b/index.html
@@ -115,21 +115,22 @@
               <div class="subheading mb-3">Cofounder and CEO</div>
               <div> This was my first experience starting a company. VITA Fitness was an on-demand, peer-to-peer fitness network aimed to revolutionize the personal training industry. Our app replaced the process of hiring overqualified, hyper-expensive personal trainers by connecting novices with regular gym-goers that know what they're doing. I spent a few months developing the mobile application using React Native, Firebase, Node.js, Expo, and more. I spent a semester collecting user feedback, applying for funding and accelerators, and seeking legal advice. Check out the <a href="http://vitafitapp.com/">website</a>,   <a href="https://www.youtube.com/watch?v=lRw4BVoQN4U&feature=youtu.be">promo video</a>, and <a href="https://github.com/adamripley98/fitnessapp">github</a>.
               </div>
-          </div>
+            </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">June 2017 - December 2017</span>
           </div>
-        </div>
+      </div>
 
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Litter Derby</h3>
             <div class="subheading mb-3">Founder</div>
-            <div> This was a charity project I started back in high school aimed at incentivizing cleaning up trash.
+            <div> This was a charity project I started back in high school aimed at incentivizing cleaning up trash. We would find especially dirty places in Anchorage and hide cash among some of the trash. We would then post clues to the cash's location on our <a href="https://www.facebook.com/litterderby">Facebook page</a> encouraging people to pick up trash and find money. By the end of the project, we had 1500+ facebook followers, were featured in the news, and had made Anchorage 200+ bags of trash cleaner.
             </div>
-        </div>
+          </div>
         <div class="resume-date text-md-right">
           <span class="text-primary">2015</span>
+          </div>
         </div>
       </div>
 
