--- a/index.html
+++ b/index.html
@@ -141,57 +141,53 @@
         <div class="my-auto">
           <h2 class="mb-5">Skills</h2>
 
-          <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-          <ul class="list-inline list-icons">
-            <li class="list-inline-item">
-              <i class="devicons devicons-html5"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-css3"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-javascript"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-jquery"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-sass"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-less"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-bootstrap"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-wordpress"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-grunt"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-gulp"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-npm"></i>
-            </li>
-          </ul>
-
-          <div class="subheading mb-3">Workflow</div>
+          <div class="subheading mb-3">Programming languages</div>
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
-              Mobile-First, Responsive Design</li>
+              Javascript</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Cross Browser Testing &amp; Debugging</li>
+              Java</li>
+            <li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Cross Functional Teams</li>
+              OCaml</li>
+          </ul>
+          </div>
+          <div class="subheading mb-3">Web Development &amp; Tools</div>
+          <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
-              Agile Development &amp; Scrum</li>
+              HTML5</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              CSS3</li>
+              <li>
+              <li>
+                <i class="fa-li fa fa-check"></i>
+                Bootstrap</li>
+              <li>
+              <i class="fa-li fa fa-check"></i>
+              React/Redux</li>
+              <li>
+                <i class="fa-li fa fa-check"></i>
+                React Native</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Express</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              MongoDB</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Firebase</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Node.js</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Git</li>
           </ul>
         </div>
       </section>
@@ -199,7 +195,7 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
-          <p>Outside of my studies, I'm passionate about weightlifting, web dev, soccer, nature, spikeball, meditation, cooking, drawing, making videos, reading, and traveling. Highlighting a few things, last November I competed in my first <a href="https://vimeo.com/241790505">bodybuilding competition.</a> I'm currently reading <a href="https://fourhourworkweek.com/">The 4 Hour Work Week.</a> As far as coding projects, currently I'm finishing up contract work for Nalda, beginning work on a dating application, and trying to find time to start on a time capsule mobile app idea. I spent 2017 recording a second of every day and compiled <a href="https://www.youtube.com/channel/UCGAmt_wP78wOZ5Dhc39gzbA">this video.</a> Some of my big goals for 2018 are to get better at making <a href="https://www.youtube.com/channel/UCGAmt_wP78wOZ5Dhc39gzbA">videos</a>, get my deadlift squat bench total to 1200 pounds, and to improve my Spanish.</p>
+          <p>Outside of my studies, I'm passionate about weightlifting, web dev, soccer, nature, backpacking, foosball, spikeball, meditation, cooking, drawing, making videos, reading, and traveling. Highlighting a few things, last November I competed in my first <a href="https://vimeo.com/241790505">bodybuilding competition.</a> I'm currently reading <a href="https://fourhourworkweek.com/">The 4 Hour Work Week.</a> As far as coding projects, currently I'm finishing up contract work for Nalda, beginning work on a dating application, and trying to find time to start on a time capsule mobile app idea. I spent 2017 recording a second of every day and compiled <a href="https://www.youtube.com/channel/UCGAmt_wP78wOZ5Dhc39gzbA">this video.</a> Some of my big goals for 2018 are to get better at making <a href="https://www.youtube.com/channel/UCGAmt_wP78wOZ5Dhc39gzbA">videos</a>, get my deadlift squat bench total to 1200 pounds, and to improve my Spanish.</p>
         </div>
       </section>
 
