--- a/index.html
+++ b/index.html
@@ -81,12 +81,34 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Experience</h3>
-              <div class="subheading mb-3">Cool place</div>
-              <p>i did lots of things and stuffs here</p>
+              <h3 class="mb-0">Personal Trainer</h3>
+              <div class="subheading mb-3">Self-Employed</div>
+              <p>I've spent the past few years sharing my passion for fitness with others in the form of personal trainers. Over the years, I've trained a number of different people: free sessions for my friends looking into getting into weightlifting and paid sessions for clients looking to increase sports performance and get more fit. In the past, I've taught proper weightlifting form, helped people better their diet, and built custom workout plans. I'm planning to get certified through NASM to continue with my personal training.  </p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">March 2017 - Present</span>
+              <span class="text-primary">January 2015 - Present</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Personal Trainer</h3>
+              <div class="subheading mb-3">Self-Employed</div>
+              <p>I've spent the past few years sharing my passion for fitness with others in the form of personal trainers. Over the years, I've trained a number of different people: free sessions for my friends looking to get into weightlifting and paid sessions for clients looking to increase sports performance and get more fit. In the past, I've taught proper weightlifting form, helped people better their diet, and built custom workout plans. I'm planning to get certified through <a href="https://www.nasm.org/">NASM</a> to continue with my personal training.  </p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">January 2015 - Present</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Entrepreneurship Intern</h3>
+              <div class="subheading mb-3">Alaska SBDC</div>
+              <p>The <a href="https://aksbdc.org/Alaska">Alaska Small Business Development Center</a> took me on as a client and consulted me through the process of building a personal training company in which college students train other students. I developed a business plan, website, social media presence, logos, and budgets for the company, as well as interviewed fitness professionals and conducted market research. This project would later inspire my first attempt at a startup: <a href="http://vitafitapp.com/">Vita Fitness</a>. </p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">December 2014 - May 2015</span>
             </div>
           </div>
 
@@ -113,7 +135,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Vita Fitness</h3>
               <div class="subheading mb-3">Cofounder and CEO</div>
-              <div> This was my first experience starting a company. VITA Fitness was an on-demand, peer-to-peer fitness network aimed to revolutionize the personal training industry. Our app replaced the process of hiring overqualified, hyper-expensive personal trainers by connecting novices with regular gym-goers that know what they're doing. I spent a few months developing the mobile application using React Native, Firebase, Node.js, Expo, and more. I spent a semester collecting user feedback, applying for funding and accelerators, and seeking legal advice. Check out the <a href="http://vitafitapp.com/">website</a>,   <a href="https://www.youtube.com/watch?v=lRw4BVoQN4U&feature=youtu.be">promo video</a>, and <a href="https://github.com/adamripley98/fitnessapp">github</a>.
+              <div> This was my first experience starting a company. VITA Fitness was an on-demand, peer-to-peer fitness network aimed to revolutionize the personal training industry. Our app replaced the process of hiring overqualified, hyper-expensive personal trainers by connecting novices with regular gym-goers that know what they're doing. I developed the mobile application using React Native, Firebase, Node.js, Expo, and more. I then collected user feedback, applying for funding and accelerators, and seeking legal advice. Check out the <a href="http://vitafitapp.com/">website</a>,   <a href="https://www.youtube.com/watch?v=lRw4BVoQN4U&feature=youtu.be">promo video</a>, and <a href="https://github.com/adamripley98/fitnessapp">github</a>.
               </div>
             </div>
           <div class="resume-date text-md-right">
@@ -195,14 +217,14 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
-          <p>Outside of my studies, I'm passionate about weightlifting, web dev, soccer, nature, backpacking, foosball, spikeball, meditation, cooking, drawing, making videos, reading, and traveling. Highlighting a few things, last November I competed in my first <a href="https://vimeo.com/241790505">bodybuilding competition.</a> I'm currently reading <a href="https://fourhourworkweek.com/">The 4 Hour Work Week.</a> As far as coding projects, currently I'm finishing up contract work for Nalda, beginning work on a dating application, and trying to find time to start on a time capsule mobile app idea. I spent 2017 recording a second of every day and compiled <a href="https://www.youtube.com/channel/UCGAmt_wP78wOZ5Dhc39gzbA">this video.</a> Some of my big goals for 2018 are to get better at making <a href="https://www.youtube.com/channel/UCGAmt_wP78wOZ5Dhc39gzbA">videos</a>, get my deadlift squat bench total to 1200 pounds, and to improve my Spanish.</p>
+          <p>Outside of my studies, I'm passionate about weightlifting, web dev, soccer, nature, backpacking, foosball, spikeball, meditation, cooking, drawing, making videos, reading, and traveling. Highlighting a few things, last November I competed in my first <a href="https://vimeo.com/241790505">bodybuilding competition.</a> I'm currently reading <a href="https://fourhourworkweek.com/">The 4 Hour Work Week.</a> As far as coding projects, currently I'm finishing up contract work for Nalda, beginning work on a dating application, and trying to find time to start on a time capsule mobile app idea. I spent 2017 recording a second of every day and compiled <a href="https://www.youtube.com/channel/UCGAmt_wP78wOZ5Dhc39gzbA">this video.</a> Some of my big goals for 2018 are to get better at making <a href="https://www.youtube.com/channel/UCGAmt_wP78wOZ5Dhc39gzbA">videos</a>, get my deadlift squat bench total to 1200 pounds, learn to do a standing backflip, and to improve my Spanish.</p>
         </div>
       </section>
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
         <div class="my-auto">
           <h2 class="mb-5">Contact</h2>
-          <p>Feel free to send me an email at <a href="mailto:aripley@wharton.upenn.edu">aripley@wharton.upenn.edu</a> or add me on social media!</p>
+          <p>Feel free to send me an email at <a href="mailto:aripley@wharton.upenn.edu">aripley@wharton.upenn.edu</a> or add me on social media! I'm always looking for more web dev projects to take on, operations roles in interesting companies, or other cool opportunities. </p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://www.linkedin.com/in/adam-ripley-973668108/">
