--- a/index.html
+++ b/index.html
@@ -71,8 +71,29 @@
           <div class="subheading mb-5">2954 Crows Nest Cir · Anchorage AK, 99515 · (907) 441-9174 ·
             <a href="mailto:aripley@wharton.upenn.edu">aripley@wharton.upenn.edu</a>
           </div>
-          <p class="mb-5">I'm a student, freelance web developer, and aspring entrepreneur from Anchorage, Alaska. Currently I’m a sophomore at the University of Pennsylvania studying Operations Management, Marketing, and Computer Science. I work hard to combine my passions for technology and entrepreneurship to create things I can look back on and be proud of. Reach out at <a href="mailto:aripley@wharton.upenn.edu">aripley@wharton.upenn.edu</a>.</p>
+          <p class="mb-5">I'm a student, freelance web developer, and aspring entrepreneur from Anchorage, Alaska. Currently I’m a sophomore at the University of Pennsylvania studying Operations Management, Marketing, and Computer Science.</p>
+          <p class="mb-5">I have deep interests in both the business and technical sides of startups. I spent last summer diving deep into web development, became obsessed with it, and have since started doing contract work. While I love coding, I find work where I'm connecting with clients, solving difficult business problems, and creating enjoyable consumer experiences the most rewarding. Ideally, this summer I'd like to work for a small startup where I can have a lot of freedom on the operations side of things to get founder experience.</p>
+          <p class="mb-5">I hope you enjoy looking through my personal site and it gives you a bit of background on who I am and what I'm interested in. Feel free to reach out at <a href="mailto:aripley@wharton.upenn.edu">aripley@wharton.upenn.edu!</a>
         </div>
+      </section>
+
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
+        <div class="my-auto">
+          <h2 class="mb-5">Education</h2>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">University of Pennsylvania, The Wharton School</h3>
+              <div class="subheading mb-3">Marketing & Operations Management, Computer Science</div>
+              <p>I'm pursuing marketing and operations in hopes they'll prepare me for building interesting products and being a successful founder. I'm studying computer science because I want to have the power to create the ideas that I come up with. Some of my honors and activities are being on the Dean's List and Wharton Undergraduate Entrepreneurship Club, in which I maintain the club website and act as a board member. </p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">August 2016 - Present</span>
+            </div>
+          </div>
+
+        </div>
+
       </section>
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
@@ -81,12 +102,12 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Personal Trainer</h3>
-              <div class="subheading mb-3">Self-Employed</div>
-              <p>I've spent the past few years sharing my passion for fitness with others in the form of personal trainers. Over the years, I've trained a number of different people: free sessions for my friends looking into getting into weightlifting and paid sessions for clients looking to increase sports performance and get more fit. In the past, I've taught proper weightlifting form, helped people better their diet, and built custom workout plans. I'm planning to get certified through NASM to continue with my personal training.  </p>
+              <h3 class="mb-0">Business Financial Analyst</h3>
+              <div class="subheading mb-3">Alaska Coach Tours</div>
+              <p>I spent a summer working for a small tourism company called <a href="http://www.alaskacoachtours.com/">Alaska Coach Tours</a> where I handled much of the financial side of the business. I created performance snapshots of how the company was doing in each of its locations, tracked and analyzed generated revenue to compare to budget, and used data from past years to formulate a budget for the upcoming tourism season.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">January 2015 - Present</span>
+              <span class="text-primary">May 2016 - September 2016</span>
             </div>
           </div>
 
