--- a/index.html
+++ b/index.html
@@ -43,10 +43,13 @@
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#education">Education</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#education">Projects</a>
+            <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
@@ -89,6 +92,17 @@
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">August 2016 - Present</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Dimond High School</h3>
+              <div class="subheading mb-3">GPA: 4.39/4.00. 3rd in class.</div>
+              <p>During my time in high school I founded an entrepreneurship club with 40+ members, captained the varsity soccer team, was president of Athletic Council, and gave the graduation speech. Some of my honors were graduating Summa cum laude, being a National AP Scholar, and being a U.S. Presidential Scholarship Semifinalist. </p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">August 2012 - May 2016</span>
             </div>
           </div>
 
@@ -137,7 +151,7 @@
 
       </section>
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
         <div class="my-auto">
           <h2 class="mb-5">Projects</h2>
 
